fix page view overflow

--- a/src/app/Admin/style.css
+++ b/src/app/Admin/style.css
@@ -1,4 +1,5 @@
 .output_div{
+    padding: 10px;
     height: 85.5vh;
     width: 42.5vw;
     border: 2px solid;
